tests/ui/attributes/malformed-fn-align.stderr
error[E0589]: invalid `repr(align)` attribute: `align` needs an argument
  --> $DIR/malformed-fn-align.rs:5:12
   |
LL |     #[repr(align)]
   |            ^^^^^ help: supply an argument here: `align(...)`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0589`.
